# detsrv

./: CMakeLists.txt  README.md  detect.service
detcore/: CMakeLists.txt
detcore/include/: minilogger.h
detcore/include/detcore/: detection.h  factory.h  io.h  plugincore.h  serialize.h  utils.h
detcore/src/: io.cpp  plugincore.cpp  utils.cpp
include/detsvr/: IDetect.h  detsvr.h
projects/multitask/: CMakeLists.txt  config.cpp  config.h  detection.h  inference.cpp  inference.h  run.cpp  run2.cpp  serialization.cpp  serialization.h
projects/multitask/yolop/: CMakeLists.txt  common.hpp  gentrt.cpp  main.cpp  utils.h  yolov5.hpp
projects/multitask/yolopcut/: gentrt.cpp  main.cpp  utils.h  yololayer.h  yolov5.hpp
projects/plugintest/: CMakeLists.txt  README.md  detection.h  plugintest.cpp
projects/plugintest/minic/: CMakeLists.txt  minic.cpp  minic.h
projects/simplesvr/: CMakeLists.txt  README.md  config.cpp  config.h  service.h  simplesvr.cpp
projects/uavhttp/: CMakeLists.txt  README.md  config.cpp  config.h  detection.h  detectionservice.cpp  detectionservice.h  run.cpp  serialization.cpp  serialization.h  uavship.cpp  uavship.h
projects/uavhttp/yolov5/: README.md
projects/uavloop/: CMakeLists.txt  README.md  run.cpp  serialization.cpp
projects/uavloop/yolov5/: CMakeLists.txt  yolov5.cpp
projects/uavvideo/: CMakeLists.txt  README.md  genconfig.cpp  run.cpp  serialization.h  uavship.cpp  uavship.h
projects/uavvideo/yolov5/: CMakeLists.txt  yolov5_trt.py
projects/videoplayer/: CMakeLists.txt  README.md  config.h  run.cpp  serialization.cpp  serialization.h
src/: ISerialize.h  config.cpp  config.h  detectionresult.cpp  detectionservice.cpp  detectionservice.h  keygen.cpp  minilogger.h  plugincore.cpp  plugincore.h  run.cpp  serialization.cpp  serialization.h  service.cpp  service.h  utils.cpp  utils.h  videoanalysis.cpp
src/video/: CMakeLists.txt  io.cpp  io.h  playmanager.cpp  playmanager.h  postprocess.cpp  postprocess.h  rtmpwriter.cpp  rtmpwriter.h  rtspcapture.cpp  rtspcapture.h  videoanalysis.cpp  videoplay.cpp  videoreader.cpp  videoreader.h
test/: CMakeLists.txt  genconfig.cpp  simplesvr.cpp
tests/: CMakeLists.txt  plugintest.cpp
tools/: CMakeLists.txt  client.py  genconfig.cpp  keygen.cpp  loopdetect.cpp  simplesvr.cpp  videoplayer.cpp  videopush.cpp
